...
    "calendar.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Calendar"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Lịch chu kỳ"
...
    "profile.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cá nhân"
...
    "tab.kicks": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Kicks"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cử động"
...
